--- a/index.html
+++ b/index.html
@@ -1861,7 +1861,7 @@ EgAAAAAAAAAAAAAAAAA4Ev4XYAC6GT1KNoqhyAAAAABJRU5ErkJggg==">
             </div>
           </div>
         </section>
-        <section class="contacts section-indent" data-anchor="#contacts"><iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2286.6561594700797!2d82.92938661590267!3d55.03171808036669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YDRg9GB0YHQutC-LdC90LXQvNC10YbQutC40Lkg0YPQvdC40LLQtdGA0YHQuNGC0LXRgiBnb29nbGUgbWFw!5e0!3m2!1sru!2sua!4v1606494270077!5m2!1sru!2sua" width="100%" height="575" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <section class="contacts section-indent" data-anchor="#contacts"><iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2286.6561594700797!2d82.92938661590267!3d55.03171808036669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YDRg9GB0YHQutC-LdC90LXQvNC10YbQutC40Lkg0YPQvdC40LLQtdGA0YHQuNGC0LXRgiBnb29nbGUgbWFw!5e0!3m2!1sru!2sua!4v1606494270077!5m2!1sru!2sua" height="575" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <div class="contacts__info-map contacts__info">
             <h3>Контакты</h3>
             <p>г. Новосибирск, <br> ул.Ядринцевская 68/1, оф 608</p>
